2016-04-12	ARMv4 workaround; added ARMv4t target.

		include/biting-pear/lolwut.h :
		- added workaround for g++ 4.7 bug triggered when compiling
		  for ARMv4 sans Thumb

		.travis.yml :
		- added armv4t-linux-gnueabi target platform
		- reordered target platforms

2016-04-11	Improved memory wiping on x86-32 and x86-64.

		include/biting-pear/rofl.h :
		- initial version

		share/biting-pear/doge-8.ccc :
		- renamed from doge-8.cc
		- now uses biting_pear::rofl<...>

		bin/biting-pear-c++.ccc :
		- share/biting-pear/doge-8.cc -> share/biting-pear/doge-8.ccc

		GNUmakefile :
		- added include/biting-pear/rofl.h as a dependency
		- share/biting-pear/doge-8.cc -> share/biting-pear/doge-8.ccc

		.travis.yml :
		- added armv4-linux-gnueabi target platform

2016-03-27	Split lolwutconf into its own project.

		lolwutconf/* :
		- split into a different GitHub project, https://github.com/
		  tkchia/lolwutconf

		.gitmodules :
		- initial version

		.travis.yml ,
		test/travis-install-deps.sh :
		- added i686-linux-gnu target platform

2016-03-26	Trying out Travis CI.

		.travis.yml ,
		test/travis-install-deps.sh :
		- initial version

		bin/biting-pear-doge.ccc :
		- removed (not-very-useful) scrambling of BFD function names
		  in error messages

		include/biting-pear/kthxbai.h :
		- fixed use of arplw instruction for x86-32

		README.md :
		- added link to Travis build status

2016-03-21	Tweaks.

		bin/biting-pear-c++.ccc :
		- `-Xbiting-pear -doge' now invokes biting-pear-c++
		  recursively, and passes -v to recursive subprocesses

		share/biting-pear/doge-1.ccc :
		- share/biting-pear/doge.cc ~> share/biting-pear/doge.ccc
		- added confusion

		GNUmakefile :
		- share/biting-pear/doge.cc ~> share/biting-pear/doge.ccc

2016-03-15	Beefed up on the documentation a bit.

		README.md :
		- added `-Xbiting-pear -doge' option for `biting-pear-c++'
		- added `--target-dir=...' option for `configure'
		- corrected C++ usage to use `#include <...>', not `#include
		  "..."'
